Assignment 1/testcases/negative/T8.java
class T1 {
}
//Error: MainClass is missing
